--- a/07-io/lekce07-io.tex
+++ b/07-io/lekce07-io.tex
@@ -56,7 +56,7 @@
 \begin{column}{0.6\textwidth}  
 \begin{itemize}
 \item Adresová sběrnice (A0..A31) může být oddělená, nebo multiplexovaná, nebo sdílet stejné signály jako datová část
-\item Datová sběrnice (D0..D31) může být obousměrná, nebo oddělená pro každý směr zvlášť, pralelní nebo sériová
+\item Datová sběrnice (D0..D31) může být obousměrná, nebo oddělená pro každý směr zvlášť, paralelní nebo sériová
 \begin{itemize}
 \item zde na obrázku je paralelní 32-bitová sběrnice typu half-duplex stejné vodiče pro oba směry
 \end{itemize}
