--- a/10-call/lekce10-call.tex
+++ b/10-call/lekce10-call.tex
@@ -161,7 +161,7 @@ struct a permut(int x, int y);
 
 struct a t;
 
-t = permut(1, 2, 3, 4);
+t = permut(2, 3);
 \end{minted}
 \end{column}
 \begin{column}{0.55\textwidth}  
@@ -174,7 +174,7 @@ void permut(struct a *r, int x, int y);
 
 struct a t;
 
-permut(&t, 1, 2, 3, 4);
+permut(&t, 2, 3);
 \end{minted}
 \end{column}
 \end{columns}
