--- a/03-cpu/lekce03-cpu.tex
+++ b/03-cpu/lekce03-cpu.tex
@@ -42,7 +42,7 @@
 \item  Ubuntu \url{https://launchpad.net/~qtrvsimteam/+archive/ubuntu/ppa}
 \item Suse, Fedora and Debian \url{https://software.opensuse.org/download.html?project=home\%3Ajdupak\&package=qtrvsim}
 \item Suse Factory TBD
-\item Online version \url{https://dev.jakubdupak.com/qtrvsim/}
+\item Online version \url{https://comparch.edu.cvut.cz/qtrvsim/app/}
 \item LinuxDays 2019 QtMips talk – záznam interaktivní přednášky \url{https://youtu.be/fhcdYtpFsyw}, \url{https://pretalx.linuxdays.cz/2019/talk/EAYAGG/}
 \end{itemize}
 \end{frame}
