lecture 01 en: standardize spelling on Quiz
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/01-intro/apo-lecture01-intro-en.tex
+++ b/01-intro/apo-lecture01-intro-en.tex
@@ -482,7 +482,7 @@ X & Y & X and Y & X or Y & X xor Y & X nand Y & X nor Y & X xnor Y \\\hline
 
 
 \begin{frame}
-\frametitle{Boolean Algebra -- Quizz 1}
+\frametitle{Boolean Algebra -- Quiz 1}
 
 Signals/wires can also branch. What does the following circuit do?
 \begin{center}
@@ -498,7 +498,7 @@ C) the result is X and not Y                     & D) the result is not X
 
 
 \begin{frame}
-\frametitle{Logic/Combinational Circuits -- Quizz 2}
+\frametitle{Logic/Combinational Circuits -- Quiz 2}
 
 Some functions can be converted to gates even more efficiently than via the basic logic functions and, or, not.
 
@@ -520,7 +520,7 @@ Quiz: What is the result function equivalent to:
 
 
 \begin{frame}
-\frametitle{Logic/Combinational Circuits -- Quizz 3}
+\frametitle{Logic/Combinational Circuits -- Quiz 3}
 
 \begin{columns}
 \begin{column}{0.55\textwidth}
@@ -549,7 +549,7 @@ Quiz: What is the circuit function:
 
 
 \begin{frame}
-\frametitle{Binary Encoding/Representation/Numeral System -- Quizz 4}
+\frametitle{Binary Encoding/Representation/Numeral System -- Quiz 4}
 
 Quiz: One wire represents one value, either 0 or 1. How to represent more values/symbols, like all integers from 0 to 255 (i.e. one byte)?
 \begin{itemize}
@@ -1111,7 +1111,7 @@ Shift by 0-7 bits can be composed from shift by 1, 2, 4:
 
 
 \begin{frame}
-\frametitle{Quizz}
+\frametitle{Quiz}
 
 How many layers (row) Barrel shifter must have for 64 bit number, i.e. for rotations from 0 to 63? (For rotations from 0 to 7 it was 3 layers)
 
@@ -1126,7 +1126,7 @@ How many layers (row) Barrel shifter must have for 64 bit number, i.e. for rotat
 
 
 \begin{frame}
-\frametitle{Feedback Quizz}
+\frametitle{Feedback Quiz}
 
 How much did you understand today?
 \begin{itemize}
