--- a/02-numbers/apo-lecture02-numbers-en.tex
+++ b/02-numbers/apo-lecture02-numbers-en.tex
@@ -15,7 +15,7 @@
 \section{Integer Numbers and Operations}
 
 \begin{frame}
-\frametitle{Repetition and Basis from Previous lecture}
+\frametitle{Repetition and Fundamentals from Previous Lecture}
 The last lecture introduced:
 \begin{itemize}
 \item The bit (logical value) representation by voltage level
@@ -250,9 +250,9 @@ The longest, central column in more detail:
 
 \begin{itemize}
 \item After 8 counting steps, i.e. 16 gate delays, the two bits are ready for final adder
-\item The column on the right of the central one are already summed all carry signals have been promoted
-\item Two 64-bit numbers (sum and carry) remain to add, which can also be done in 16 gate delays
-\item Result - we multiply two numbers for the price of time corresponding to additions
+\item The column on the right of the central one are already partially summed and 8 the last carry signals have been promoted
+\item Two 120-bit numbers (sum and carry) remain to add, which can also be done in 30 gate delays
+\item Result - we multiply two numbers for the price of time corresponding to two 64-bit additions
 \end{itemize}
 
 \end{frame}
@@ -316,8 +316,8 @@ The input A is stored into two registers AC,A\\
 \item The A register is shifted only in the last step, AC is not shifted -- why?
 \item There exists even faster algorithm -- High Radix Division (it is complex, above focus of our subject)
 \begin{itemize}
-\item It estimates more bits for each precision enhancing interation
-\item 1994 -- Pentium FDIV bug -- incoorect implementation of Sweeney, Robertson, and Tocher (SRT) algorithm -- two bits estimated per single cycle
+\item It estimates more bits for and precision is enhancing by iterations
+\item 1994 -- Pentium FDIV bug -- incorrect implementation of Sweeney, Robertson, and Tocher (SRT) algorithm -- two bits estimated per single cycle
 \end{itemize}
 \end{itemize}
 \end{column}
@@ -618,15 +618,15 @@ Excess-K (offset binary):
 \begin{columns}
 \begin{column}{0.5\textwidth}
 \begin{itemize}
-\item for n-bit representation, offset K is usually $S=2^{n-1}$ or $S=2^{n-1}-1$
+\item for k-bit representation, offset K is usually $K=2^{k-1}$ or $K=2^{k-1}-1$
 \item representation/code for number X is $A(X) = X+K$
 \item arithmetic value is obtained from $D(A) = A-K$
-\item range of the represented arithmetic values is $<-K, 2^{n}-K-1>$
+\item range of the represented arithmetic values is $<-K, 2^{k}-K-1>$
 \end{itemize}
 \end{column}
 \hfill
 \begin{column}{0.5\textwidth}
-for n=8 and K=127
+for k=8 and K=127
 \bigskip
 \begin{tabular}{|c|c|}\hline
 {\small A(X)}  & {\small Value} \\\hline
@@ -651,11 +651,11 @@ for n=8 and K=127
 
 \begin{itemize}
 \item the addition and substraction operations processed directly representation:
-\item $A ( X + Y )=( X + Y )+S =( X + S )+(Y + S ) - S = A ( X )+ A (Y ) -S$
-\item $A ( X - Y )=( X - Y )+ S =( X + S ) - (Y +S )+S = A ( X ) - A (Y )+S$
+\item $A ( X + Y )=( X + Y )+ K =( X + K ) + (Y + K ) - K = A ( X )+ A (Y ) -K$
+\item $A ( X - Y )=( X - Y )+ K =( X + K ) - (Y +K )+K = A ( X ) - A (Y )+K$
 \item multiplication is even more complex:
-\item $A ( X \cdot Y )=( X \cdot Y )+S =( X + S )\cdot(Y + S )-( X + S +Y +S )\cdot S + S^2+ S
-= A ( X )\cdot A (Y ) - ( A ( x)+ A ( y ))\cdot S + S^2 +S$
+\item $A ( X \cdot Y )=( X \cdot Y )+K =( X + K )\cdot(Y + K )-( X + K +Y +K )\cdot K + K^2+ K
+= A ( X )\cdot A (Y ) - ( A ( x)+ A ( y ))\cdot K + K^2 +K$
 \end{itemize}
 \bigskip
 \begin{itemize}
@@ -733,8 +733,6 @@ Fixed point numbers:
 \item the better precision can be achieved than for same bit size \texttt{float}, or \texttt{double} representation
 \end{itemize}
 
-Some SIMD instructions use fixed point numbers representation for some operations.
-
 \end{frame}
 
 \begin{frame}
@@ -753,7 +751,9 @@ Some SIMD instructions use fixed point numbers representation for some operation
 \item It is not so significant complication because multiplication by $2^s$ is shift by $s$ bits to the left and division by $2^s$ is (arithmetic) shift by $s$ to the right.
 \end{itemize}
 
+\bigskip
 
+Some SIMD instructions set extensions provide implementation of operations for computation in fixed point numbers representation.
 
 \end{frame}
 
@@ -766,17 +766,18 @@ Some SIMD instructions use fixed point numbers representation for some operation
 It is equivalent to scientific notation format for decimal real numbers writting:
 $-123 000 000 000 000.0 = -1.23 \cdot 10^{14} = -1.23\text{E} 14$\\
 $0.000 000 000 000 123 = -1.23 \cdot 10^{-13} = -1.23\text{E}-13$\\
-
+Significand (mantissa) $\in \left\langle 1; 10 \right)$ for normalized form
 \bigskip
 
 Binary representation only changes base for exponent to 2:\\
-$110 1100 0000 0000.0 = 1.1011 \cdot 2^{14} = 1.1011\text{E} 14 = 29696_{10}$\\
-$-0.0000 0000 0000 0001 1101 = -1.1101 \cdot 2^{-16} = -1.1101\text{E}-16 \approx$\\
-\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}$\approx0.00002765_{10}$\\
-
+$110 1100 0000 0000.0_2 = 1.1011_2 \cdot 2^{14} = 1.1011_2\text{E} 14 = 29696_{10}$\\
+$-0.0000 0000 0000 0001 1101_2 = -1.1101_2 \cdot 2^{-16} = -1.1101_2\text{E}-16 \approx$\\
+\phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}$\approx0.00002765_{10}$\\
+Significand (mantissa) $\in \left\langle 1; 10_2 \right)$ that is
+$\in \left\langle 1; 2_{10} \right)$ for normalized form
 \bigskip
 
-As in scientific notation the number has to start by single non-zero digit before decimal point, the binary representation has to start singe one (only non zero number) before binary point
+As in scientific notation the number has to start by single non-zero digit before decimal point, the binary representation has to start by single one (exception is zero) before binary point
 
 
 \end{frame}
@@ -790,14 +791,14 @@ Standard IEEE-754 defines how to encode real numbers into 32 (C float), 64 bits 
 \begin{itemize}
 \item 1 bit sign (the both +0 and -0 are defined)
 \item 8 bits two based exponet in excess-k representation (K=127)
-\item 23 bits to represent mantissa fractions (the MSB one is implicit)
+\item 23 bits to represent significand fractions (plus implicit MSB one)
 \end{itemize}
 \bigskip
 64-bit representation of the real number composes of:
 \begin{itemize}
 \item 1 bit sign (the both +0 and -0 are defined)
 \item 11 bits two based exponet in excess-k representation (K=127)
-\item 52 bits to represent mantissa fractions (the MSB one is implicit)
+\item 52 bits to represent significand fractions (plus implicit MSB one)
 \end{itemize}
 
 \end{frame}
@@ -810,7 +811,7 @@ Example:
 Real number $0.828125_{(10)} = 0.5+0.25+0.0625+0.015625=2^{-1}+2^{-2}+2^{-4}+2^{-6} = 0.110101_{(2)}$.\\
 The number is converted into scientific like binary format: $0.110101 = 1.10101\text{E}-1$.\\
 Exponent is $e=-1$, its excess-k representation (K = 127) is $A(-1)=-1+127 = 126$.\\
-The space for leading MSB of mantissa (hidden one) is not reserved because is is guaranteed by format definition (except zero and some corner cases)a:
+The space for leading MSB of significand (hidden one) is not reserved because is is guaranteed by format definition (except zero and some corner cases)a:
 
 \begin{center}
 \includegraphics[width=0.4\textwidth]{float_example-en.pdf}
@@ -830,8 +831,8 @@ Demoralized numbers are used to cover range near zero and can be written as \tex
 \bigskip
 When exponet is encoded as all ones 1, that is 255, i.e. exponent arithmetic value is 128, then special value is represented 
 \begin{itemize}
-\item if all mantissa bits are 0, then infinite (value to big to represent) is stored, it can be \textit{-inf}, or \textit{inf} according to sign.
-\item if mantissa is non-zero, then nothing about arithmetic value can be considered \textit{NaN} -- Not a Number, some error in the computation, for example square root of then negative real number.
+\item if all significand bits are 0, then infinite (value to big to represent) is stored, it can be \textit{-inf}, or \textit{inf} according to sign.
+\item if significand is non-zero, then nothing about arithmetic value can be considered \textit{NaN} -- Not a Number, some error in the computation, for example square root of then negative real number.
 \end{itemize}
 \end{frame}
 
@@ -840,27 +841,27 @@ When exponet is encoded as all ones 1, that is 255, i.e. exponent arithmetic val
 
 Encoding table:
 \begin{tabular}{|c|c|l|}\hline
-Exponent & Mantissa &  Value \\ \hline
+Exponent & Significand &  Value \\ \hline
 00000000 & 0 &  0.0 -- zero \\ \hline
-00000000 & non-zero &  Normalized numbers around 0 \\ \hline
-00000001 & 0 &  the smallest normalized number with mantissa hidden one \\ \hline
-\small 1 to 254 & any value &  normalized numbers with mantissa hidden one  \\ \hline
+00000000 & non-zero &  denormalized numbers around 0 \\ \hline
+00000001 & 0 & the smallest normalized number (with hidden one) \\ \hline
+\small 1 to 254 & any value &  normalized numbers (with hidden one in significand)  \\ \hline
 11111111 & 0 &  infinity \\ \hline
-11111111 & non-zero &  NaN error value \\ \hline
+11111111 & non-zero &  NaN -- error value \\ \hline
 \end{tabular}
 \bigskip
 
 The smallest normalized number not equal to zero is:
 \begin{itemize}
-\item \small exponent = 0 (-126), mantissa=000...0001, value = $2^{-23+(-126)} \approx 1.4\text{E}-45$
+\item \small exponent = 0 (-126), significand=000...0001, value = $2^{-23+(-126)} \approx 1.4\text{E}-45$
 \end{itemize}
 Normalized number with the smallest absolute value:
 \begin{itemize}
-\item \small exponent = 1 (-126), mantissa=000...0000, value = $2^{-126} \approx 1.17\text{E}-38$
+\item \small exponent = 1 (-126), significand=000...0000, value = $2^{-126} \approx 1.17\text{E}-38$
 \end{itemize}
 Normalized number with the biggest absolute value:
 \begin{itemize}
-\item \small exponent = 255 (127), mantissa=111...1111, value = $(2-2^{-23})2^{127} \approx 3.4\text{E}38$
+\item \small exponent = 255 (127), significand=111...1111, value = $(2-2^{-23})2^{127} \approx 3.4\text{E}38$
 \end{itemize}
 \end{frame}
 
@@ -868,132 +869,155 @@ Normalized number with the biggest absolute value:
 \begin{frame}
 \frametitle{IEEE-754 2008 Revision }
 
-Standard IEEE-754 navíc definuje reálné číslo s 16 bity (half precision) a s 128 bity (quad precision).
+The 2008 revision defines 16-bit real numbers encoding (half precision) and 128-bit encoding (quad precision).
 
-Reálné 16-bitové číslo obsahuje:
+16-bit real number IEEE-754 representation:
 \begin{itemize}
-\item 1 bit znaménko 
-\item 5 bitů hodnota exponentu s posunutou nulou o 15
-\item 10 bitů hodnota mantisy, (plus 11tý bit skrytý neukládaný)
+\item 1 bit sign (the both +0 and -0 are defined)
+\item 5 bits two based exponet in excess-k representation (K=15)
+\item 10 bits significand fractions (plus implicit MSB one)
 \end{itemize}
 \bigskip
-Reálné 128-bitové číslo obsahuje:
+128-bit real number IEEE-754 representation:
 \begin{itemize}
-\item 1 bit znaménko 
-\item 15 bitů hodnota exponentu s posunutou nulou o 16383
-\item 112 bitů hodnota mantisy, (plus 113 bit skrytý)
+\item 1 bit sign (the both +0 and -0 are defined)
+\item 15 bits two based exponet in excess-k representation (K=16383)
+\item 112 bits significand fractions (plus implicit MSB one)
 \end{itemize}
 
 \end{frame}
 
 
 \begin{frame}
-\frametitle{IEEE-754 }
+\frametitle{IEEE-754 - Comparison}
 
-Porovnání reálných čísel na velikost:
+Comparison of the real numbers (equal, greater than):
 \begin{itemize}
-\item Kladná čísla jsou vždy větší než záporná
-\item Po odstranění znamének, lze absolutní hodnoty čísel porovnat tak, jak jsou uložené v paměti jako celé číslo bez znaménka
+\item A positive number is greater then negative one, check sign the first if different positive is greater than negative except for zero, where +0 and -0 are equal
+\item When signs are removed then absolute numbers values can be compared in the representation format (as they are in memory) same as unsigned numbers of the same size and endianness
 \begin{itemize}
-\item To je možné díky zvolené reprezentaci exponentu jako čísla s posunutou nulou
-\item Větší exponent větší číslo, při rovnosti exponentů větší mantisa znamená větší číslo
+\item This is possible thanks to exponent excess-K (offset binary) representation
+\item Greater exponent then the represented number is greater, when exponets are equal greater significand value represents greater number.
 \end{itemize}
 \end{itemize}
+\bigskip
+Remark: the offset in exponent $k_e$-bits representation is chosen as $2^{(k_e-1)/2}-1$ which ensures that reciprocal value to the smallest normalized number fits into representation (does not overflow to Inf, $\infty$)
+
 \end{frame}
 
 
 \begin{frame}
-\frametitle{IEEE-754}
+\frametitle{IEEE-754 -- Addition / Subtraction}
 
-Sčítání nebo odčítání dvou reálných čísel ve vědecké notaci
 \begin{enumerate}
-\item Převést mantisy čísel na společný exponent, který má hodnotu největšího exponentu (porušíme notaci)
-\item Provést součet, nebo rozdíl mantis i se skrytými jedničkami
-\item Výsledné číslo normalizovat
-\begin{itemize}
-\item při sčítání se může exponent zvětšit
-\item při odčítání se exponent může zmenšit
-\end{itemize}
+\item The number with bigger exponent value is selected, significands extracted and for normalized numbers extended by implicit MSB one
+\item Significand of the number with smaller exponent is shifted right by exponent difference -- the significands are then expressed at same scale
+\item The signs are analyzed and significands are added (same sign) or subtracted (smaller number from bigger)
+\item The resulting significand is shifted right (max by one) if addition overflows or shifted left after subtraction until all leading zeros are eliminated (result can be even zero, then encode zero directly)
+\item The resulting exponent is adjusted according to the shift (increment exponent by one for each right shift by bit, decrement exponent by one for each left shift by bit)
+\item Result is normalized after these steps and sign is copied from larger source
+\item The special cases and processing when inputs are not normalized numbers or result does not fit into normalized representation 
 \end{enumerate}
 
 \end{frame}
 
 
 \begin{frame}
-\frametitle{IEEE-754}
+\frametitle{IEEE-754 -- Addition Example}
 
-Příklad: Sčítání dvou reálných čísel 31.5+0.75
+Example: add two real numbers 31.5+0.75 in their binary floating point representations
 
 $31.5_{(10)} = 11111.1_{(2)} = 1.11111\text{E}4$ \phantom{xxx} $0.75_{(10)} = 0.11_{(2)} = 1.1\text{E}-1$
 
 \bigskip
-Obě čísla převedeme na stejný exponent 4 a sečteme:\\
+Both numbers has to be converted to same binary exponet 4 and then significands are added:\\
 \texttt{\phantom{xx}1.11111}\\
 \texttt{\phantom{xx}0.000011}\vspace{-6pt}\\
 \rule[0pt]{2cm}{0.4pt}\\
-\texttt{\phantom{x}10.000001}\\
+\texttt{\phantom{x}10.000001}
+\bigskip
 
-Výsledné číslo musíme znormalizovat zvýšením exponentu na 5 a tím posunutím desetinné čárky vlevo:\\
+The result has to be normalized (significand $\in \left\langle 1; 2 \right)$) by incrementing exponent to 5 which corresponds to binary fraction point by one position left (rounding can be required to fit in defined bits for significand):\\
 $10.000001\text{E}4 = 1.0000001\text{E}5$\\
 
-Toto číslo je reprezentací čísla 32.25.
+The binary floating point number represents 32.25 decimal.
 
 \end{frame}
 
 \begin{frame}
-\frametitle{IEEE-754 -- Násobení}
+\frametitle{IEEE-754 -- Multiplication}
 
-Násobení dvou reálných čísel:
 \begin{enumerate}
-\item Exponent výsledku je součet exponentů čísel
-\item Mantisa výsledku je součin mantis čísel (i se skrytými jedničkami)
-\item Výsledné číslo normalizovat
-\begin{itemize}
-\item podle výsledku násobení mantis je někdy nutné zvýšit exponent o 1 a vyrotovat mantisu doprava
-\end{itemize}
+\item Exponents are added and signs xor-ed
+\item Significands are multiplied
+\item Result can require normalization, max 1 bit right shift and ncrement exponent by one for normalized input numbers
+\item The result is rounded
+\item Special care has to be taken for normalized inputs and or result in out of normalized range
 \end{enumerate}
+
+Hardware for multiplier is of the same or even lower complexity as the adder hardware -- only adder part is replaced by unsigned multiplier
+
 \end{frame}
 
 \begin{frame}
-\frametitle{IEEE-754 -- Násobení}
+\frametitle{IEEE-754 -- Multiplication Example}
 
-Příklad: Vynásobíme čísla $0.375 \cdot 1.5$
+Example: multiply two real numbers $0.375 \cdot 1.5$ in their binary representations
 
 $0.375_{(10)} = 0.011_{(2)} = 1.1\text{E}-2$ \phantom{xxx} $1.5_{(10)} = 1.1_{(2)} = 1.1\text{E}0$
 
-Součin mantis je:\\
-\texttt{\phantom{xxx}11} odpovídá \texttt{1.1}\\
-\texttt{\phantom{xx}*11} odpovídá \texttt{1.1}\vspace{-6pt}\\
+The significands multiplication:\\
+\begin{columns}
+\begin{column}{0.45\textwidth}
+\texttt{\phantom{xxx}11} $\;\equiv\;$ \texttt{1.1}\\
+\texttt{\phantom{xx}*11} $\;\equiv\;$ \texttt{1.1}\vspace{-6pt}\\
 \rule[0pt]{2cm}{0.4pt}\\
 \texttt{\phantom{xxx}11}\\
 \texttt{\phantom{xx}11}\vspace{-6pt}\\
 \rule[0pt]{2cm}{0.4pt}\\
-\texttt{\phantom{x}1001} odpovídá \texttt{10.01} protože výsledek má dvě desetinná čísla
+\texttt{\phantom{x}1001} 
 
-Exponent vychází $-2+0=-2$, ale výsledek součinu mantis potřebujeme normalizovat, neboli zvětšit exponent o 1 na $-1$.
+result with two binary fractional digits \texttt{10.01}
+\end{column}
+\hfill
+\begin{column}{0.45\textwidth}
+\texttt{\phantom{xx}375} $\;\equiv\;$ \texttt{0.375}\\
+\texttt{\phantom{xx}*15} $\;\equiv\;$ \texttt{1.5}\vspace{-6pt}\\
+\rule[0pt]{2cm}{0.4pt}\\
+\texttt{\phantom{x}1875}\\
+\texttt{\phantom{x}375}\vspace{-6pt}\\
+\rule[0pt]{2cm}{0.4pt}\\
+\texttt{\phantom{x}5625} 
 
-Tím dostáváme výsledek $10.01\text{E}-2 = 1.001\text{E}-1$ což je správný výsledek $0.5625_{(10)}$
+result with four decimal fractional digits \texttt{0.5625}
+\end{column}
+\end{columns}
+\bigskip
+
+Exponents addition $-2+0=-2$, but result of significands multiplication requires normalization, that is exponent is incremented to $-1$.
+
+The correct result is obtained $10.01\text{E}-2 = 1.001\text{E}-1$ $\;\equiv\;$ $0.5625_{(10)}$
 
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{IEEE-754}
+\frametitle{IEEE-754 -- Summary}
 
-Reálná čísla shrnutí:
+Real numbers:
 \begin{itemize}
-\item reálná čísla s plovoucí čárkou umí reprezentovat čísla ve velmi velkém rozsahu:
+\item the floating point real numbers allows to represent values in large dynamic range with allmost constant relative precision when exponent allows normalized form:
 \begin{itemize}
-\item float -- absolutní hodnota čísel od $1.175494351\text{E}-38$ do $3.402823466\text{E} + 38$
-\item double -- absolutní hodnota čísel od $2.2250738585072014\text{E} - 308$ do $1.7976931348623158\text{E} + 308$
+\item float -- absolute represented value from $1.175494351\text{E}-38$ to $3.402823466\text{E} + 38$
+\item double -- absolute represented value from $2.2250738585072014\text{E} - 308$ to $1.7976931348623158\text{E} + 308$
 \end{itemize}
-\item přesnost čísla se udává na počet validních cifer:
+\item the relative precision by number of valid decimal digits:
 \begin{itemize}
-\item float -- v desítkové soustavě 6-7 platných cifer
-\item double -- v desítkové soustavě 15-16 platných cifer
+\item float --  6-7 valid decimal digits (increment $2^{\left\langle -23; -24\right)} : 1$)
+\item double -- 15-16 valid decimal digits (increment $2^{\left\langle -52; -53\right)} : 1$)
 \end{itemize}
 \end{itemize}
 
-POZOR: Následující \texttt{while} cyklus neskončí:
+WARNING: next \texttt{while} loop is infinite, never ends:
 \begin{minted}{c}
   float a=1.0, step=5e-8;
   while (a*a<1.01) {
@@ -1001,21 +1025,6 @@ POZOR: Následující \texttt{while} cyklus neskončí:
   }
 \end{minted}
 \end{frame}
-
-
-\begin{frame}
-\frametitle{Bonusový bod}
-
-Jaká je dekadická hodnota 8-bitového čísla se znaménkem, jehož reprezentace v paměti je dána bajtem 0xFE?
-\begin{itemize}
-\item[A] 254
-\item[B] -0
-\item[C] -1
-\item[D] -2
-\end{itemize}
-
-\end{frame}
-
 
 \end{document}
 
