lecture 03 en: finished translation
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/apo-lecture02-numbers-en.tex
+++ b/02-numbers/apo-lecture02-numbers-en.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 %[aspectratio=169]   \usepackage[czech]{babel}
-\usepackage{apo-lecture}
+\usepackage{apo-lecture-en}
 \usepackage{pdfpages}
 \usepackage{pdfcomment}
 \usepackage{listings}
