lecture 01 02 03 en: minor title page spacing adjustment
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/apo-lecture03-cpu-en.tex
+++ b/03-cpu/apo-lecture03-cpu-en.tex
@@ -7,7 +7,7 @@
 \usepackage{array,multirow}
 
 \subtitle{Lecture 03. Central Processing Unit (CPU)}
-\author{Pavel Píša \phantom{xxxxxxx} Petr Štěpán \\ \small\texttt{pisa@fel.cvut.cz} \phantom{xxxx} \small\texttt{stepan@fel.cvut.cz} \\
+\author{Pavel Píša \phantom{xxxxxxx} Petr Štěpán \\ \small\texttt{pisa@fel.cvut.cz} \phantom{xx} \small\texttt{stepan@fel.cvut.cz} \\
 \phantom{xxxxxxxxx} \\
 License: CC-BY-SA}
 \begin{document}
