--- a/01-intro/apo-lecture01-intro-en.tex
+++ b/01-intro/apo-lecture01-intro-en.tex
@@ -8,7 +8,7 @@
 \usepackage{hhline}
 
 \subtitle{Lecture 01. Introduction}
-\author{Pavel Píša \phantom{xxxxxxxxx} Petr Štěpán \\ \small\texttt{pisa@fel.cvut.cz} \phantom{xxxx} \small\texttt{stepan@fel.cvut.cz} \\
+\author{Pavel Píša \phantom{xxxxxxxxx} Petr Štěpán \\ \small\texttt{pisa@fel.cvut.cz} \phantom{xx} \small\texttt{stepan@fel.cvut.cz} \\
 \phantom{xxxxxxxxx} \\
 License: CC-BY-SA}
 
