--- a/02-numbers/apo-lecture02-numbers-en.tex
+++ b/02-numbers/apo-lecture02-numbers-en.tex
@@ -7,7 +7,7 @@
 \usepackage{array,multirow}
 
 \subtitle{Lecture 02. Integer and Floating Point Numbers}
-\author{Pavel Píša \phantom{xxxxxxxxx} Petr Štěpán \\ \small\texttt{pisa@fel.cvut.cz} \phantom{xxxx} \small\texttt{stepan@fel.cvut.cz} \\
+\author{Pavel Píša \phantom{xxxxxxxxx} Petr Štěpán \\ \small\texttt{pisa@fel.cvut.cz} \phantom{xx} \small\texttt{stepan@fel.cvut.cz} \\
 \phantom{xxxxxxxxx} \\
 License: CC-BY-SA}
 \begin{document}
