Lecture 04 - corrected typo reported by Krystof Jan Oliva
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -342,7 +342,7 @@ Princip se využívá jak v algoritmech (lokální proměnné), kompilátorech (
 \item \textbf{Cache line} (řádka) nebo \textbf{Cache block} – základní kopírovatelná jednotka mezi hierarchickými úrovněmi. 
 \item V praxi se velikost \textbf{Cache} Line pohybuje od 8B do 1KB, typicky 64B.
 \item \textbf{Hit rate} -- počet paměťových přístupů obsloužených danou úrovní cache dělený všemi přístupy
-\item \textbf{Mis rate} -- poměr přístupů, které je potřeba obsloužit z pomalejší paměti = 1 - Hit rate
+\item \textbf{Miss rate} -- poměr přístupů, které je potřeba obsloužit z pomalejší paměti = 1 - Hit rate
 \item \textbf{Average Memory Access Time} (AMAT) $$AMAT = Hit Time + Miss Rate \times Miss Penalty$$
 \item AMAT pro víceúrovňovou cache lze spočítat rekurzivní aplikací výšeuvedeného vztahu
 \end{itemize}
