Lecture 04 - corrected typo reported by Ondrej Sykora
Closes #27

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -438,7 +438,7 @@ Adresa 12 může být umístěna do sady 0 (12 mod 4) \\
 \item \textbf{Word size} – WS .. velikost slova (zde 4 byte)
 \item \textbf{Block size} – BS .. velikost bloku (zde 1 slovo, 4 byte)
 \item \textbf{Number of blocks} -- BN .. počet bloků (zde 256)
-\item \textbf{Degree of associativity} -- N . stupeň asciativity, počet cest (zde 1)
+\item \textbf{Degree of associativity} -- N . stupeň asociativity, počet cest (zde 1)
 \end{itemize}
 
 {
