Lecture 03 - there is no subi instruction, it is same as addi with -immediate
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/lekce03-cpu.tex
+++ b/03-cpu/lekce03-cpu.tex
@@ -379,7 +379,7 @@ Význam hodnot opcode:
 \begin{tabular}{|c|l|l|}\hline
 Opcode & Skupina operací & Skutečná operace \\ \hline
 0110011 & Typ R podle fnct & add, sub, slt, or, and \\ \hline
-0010011 & Typ I podle fnct & addi, subi, slt, or, and \\ \hline
+0010011 & Typ I podle fnct & addi, slt, or, and \\ \hline
 0000011 & Čtení z paměti & lw \\ \hline
 0100011 & Zápis do paměti & sw \\ \hline
 1100011 & Větvení -- branch & beq \\ \hline
